2004-09-02  Mark Salter  <msalter@redhat.com>

	* src/flash_query.c (CYGHWR_FLASH_READ_QUERY): Add platform hook
	to handle access to query info.
	* src/flash_program_buf.c (CYGHWR_FLASH_WRITE_BUF): Add platform
	hook handle access to write buffer.

2004-08-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash_unlock_block.c (flash_unlock_block): 
	* cdl/flash_strata.cdl: CDL to control the maximum number of
	blocks the driver supports. Some of the newer strata device has more
	than the default maximum of 128. Problem pointed out by Kevin Zhang.

2005-01-26  Scott Wilkinson <scott@alliantnetworks.com>
	* src/strata.h:
	* src/strata.c:
	Flash from STMicro is compatible with the Intel strata chips, 
	so detect them as well.  Check for manuf id 0x20.

2003-10-29  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash_unlock_block.c (flash_unlock_block): test lock bit
	explicitly - newer flash parts use the reserved bits in the
	returned data.

2003-09-11  Jani Monoses <jani@iv.ro>

	* src/flash_erase_block.c (flash_erase_block): 
	* src/flash_program_buf.c (flash_program_buf): Fix bootblock handling
	in erase. Fix erase and word-program for Synchronous Strata and later
	chips where block address and word address are required in the first
	cycle of the operation while for earlier parts any address was good.
	
2003-09-10  Jani Monoses <jani@iv.ro>
	
	* cdl/flash_strata.cdl:
	* src/flash_lock_block.c (flash_lock_block): 
	* src/flash_unlock_block.c (flash_unlock_block): 
	* src/flash_erase_block.c (flash_erase_block): 
	* src/flash_query.c (flash_query): 
	* src/flash_program_buf.c (flash_program_buf): Use .2ram sections 
	for putting flash functions to RAM instead of the old method.
	
2003-05-02  Jani Monoses <jani@iv.ro>

	* src/strata.c: Switch to using generic flash_query_dev.
	The previous cache related changes broke flash_query for
	Strata because in the query case the generic flash driver was not
	called to handle the caches but the internal handling was removed